--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -6,6 +6,8 @@
             <div class="col">
                 <h1>This is the home page</h1>
                 <p>This is some text</p>
+
+                <img src="/static/images/tree.jpg" alt="" width="1365" height="2048">
             </div>
         </div>
     </div>
